// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be disabled 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  disabled={true}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#2cda9d",
        "borderRadius": 4,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#cecece",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    onLayout={[Function]}
    style={
      Array [
        Object {
          "color": "#2d2f7f",
        },
        Object {
          "color": "#585858",
        },
      ]
    }
    type="h2"
  >
    Test
  </Text>
</Touchable>
`;

exports[`renders correctly 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  delayPressIn={50}
  disabled={false}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#2cda9d",
        "borderRadius": 4,
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <Text
    allowFontScaling={true}
    markdown={false}
    onLayout={[Function]}
    style={
      Array [
        Object {
          "color": "#2d2f7f",
        },
        Object {},
      ]
    }
    type="h2"
  >
    Test
  </Text>
</Touchable>
`;
